fix align-items of .tiles-os

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -358,6 +358,7 @@ section + section {
         display: flex;
         flex-direction: row;
         justify-content: center;
+        align-items: flex-start;
         text-align: center;
         margin-top: 2rem;
 
